--- a/project22_BreakDownGame.html
+++ b/project22_BreakDownGame.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BreakDownGame</title>
+    <title>2D_BreakDownGame</title>
     <link rel="stylesheet" href="project22_BreakDownGame.css">
 </head>
 
